<resources>
    <string name="app_name">ProviStudent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_stats">StatsActivity</string>

    <!--    Wykorzystywane do spinnera w rejestracji, zbiór środków do wybrania-->
    <string-array name="srodki">
        <item>Wybierz</item>
        <item>Gotówka</item>
        <item>Karta płatnicza</item>
    </string-array>
    <string-array name="wybor">
        <item>Wydatek</item>
        <item>Przychód</item>
    </string-array>
    <!--    Wykorzystywane do spinnera w rejestracji, czestotliwosc powiadomien-->
    <string-array name="czestotliwosc">
        <item>Wybierz</item>
        <item>Co miesiąc</item>
        <item>Co trzy miesiące</item>
        <item>Co pół roku</item>
        <item>Co rok</item>
    </string-array>
    <!--    Wykorzystywane do spinnera w rejestracji, zbiór środków do wyboru w wyborze gotowki-->
    <string-array name="wybordochodu">
        <item>-Rozwiń-</item>
        <item>Zakwaterowanie</item>
        <item>Media</item>
        <item>Długi</item>
        <item>Kredyt</item>
        <item>Internet</item>
        <item>Netflix</item>
        <item>Telefon</item>
        <item>Transport</item>
        <item>Zakwaterowanie</item>
        <item>Samochód</item>
        <item>Dodaj nowy +</item>
    </string-array>
    <!--    Wykorzystywane do spinnera w cheatday-->
    <string-array name="wyborcheatday">
        <item>-Rozwiń-</item>
        <item>Leki</item>
        <item>Alkohol</item>
        <item>Ciuchy</item>
        <item>Jedzenie</item>
        <item>Impreza</item>
        <item>Dodaj nowy +</item>
    </string-array>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="wpisz_swoje_imie">wpisz swoje imię</string>
    <string name="wpisz_kwote">wpisz kwote (w zł)</string>
    <string name="statystyki">STATYSTYKI</string>
    <string name="oszczednosci">Oszczędności: 500zł</string>
    <string name="zasoby">ZASOBY</string>
    <string name="karta_bankowa_123z">Karta bankowa: 123zł</string>
    <string name="gotowka">Gotówka: 1235zł</string>
    <string name="dochod">Dochód: 1234 zł</string>
    <string name="wydatki">WYDATKI</string>
    <string name="wydatkimain">Wydatki: 950 zł</string>
    <string name="miesiac">Marzec</string>
    <string name="powiadomienia">O której godzinie chcesz otrzymywać powiadomienia?</string>
    <string name="string_powiadomienia" />
    <string name="zapisz">ZAPISZ</string>
    <string name="tak4">Tak</string>
    <string name="rejestracja_u_ytkownika">REJESTRACJA UŻYTKOWNIKA</string>
    <string name="kwotaoszczednosci">Podaj kwotę oszczędności:</string>
    <string name="wybierz">Wybierz</string>
    <string name="zobacz_list_wydatk_w"><![CDATA[>>Zobacz listę wydatków<<]]></string>
    <string name="wydaj_oszcz_dno_ci"><![CDATA[>>Wydaj oszczędności<<]]></string>
    <string name="wykorzystaj_oszcz_dno_ci"><![CDATA[>>Wykorzystaj oszczędności<<]]></string>
    <string name="zobacz_list_przychod_w"><![CDATA[>>Zobacz listę przychodów<<]]></string>
</resources>
