<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    android:background="#ededed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/wydatkipoczatek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0b5225"
            android:gravity="center"
            android:text="@string/wydatki"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold|normal"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/miesiac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/miesiac"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold|normal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="259dp"
            tools:layout_editor_absoluteY="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:orientation="horizontal">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/wykreskolowy"
                android:layout_width="216dp"
                android:layout_height="180dp"></com.github.mikephil.charting.charts.PieChart>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/przychod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Przychod: 123 zł"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|normal"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="90dp" />

                <TextView
                    android:id="@+id/zobaczprzychody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zobacz_list_przychod_w"
                    android:textColor="@color/gradient_start_color"
                    android:textSize="13sp"
                    android:textStyle="bold|normal"
                    tools:ignore="DuplicateIds,MissingConstraints"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="126dp" />

                <TextView
                    android:id="@+id/dochodaktualny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bilans: 123zł"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|normal"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="90dp" />

                <TextView
                    android:id="@+id/wydatki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wydatki: 123zł"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|normal"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="90dp" />

                <TextView
                    android:id="@+id/zobaczwydatki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zobacz_list_wydatk_w"
                    android:textColor="@color/gradient_start_color"
                    android:textSize="13sp"
                    android:textStyle="bold|normal"
                    tools:ignore="DuplicateIds,MissingConstraints"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="126dp" />

                <TextView
                    android:id="@+id/oszczednosci"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oszczednosci"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|normal"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="162dp" />

                <TextView
                    android:id="@+id/wydajoszczednosci"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wykorzystaj_oszcz_dno_ci"
                    android:textColor="@color/gradient_start_color"
                    android:textSize="13sp"
                    android:textStyle="bold|normal"
                    tools:ignore="DuplicateIds,MissingConstraints"
                    tools:layout_editor_absoluteX="200dp"
                    tools:layout_editor_absoluteY="126dp" />

                <Button
                    android:id="@+id/cheatday"
                    android:layout_width="167dp"
                    android:layout_height="37dp"
                    android:text="CHEAT DAY" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/zasoby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0b5225"
            android:gravity="center"
            android:text="@string/zasoby"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold|normal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="212dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/zasob1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/karta_bankowa_123z"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold|normal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="296dp" />

        <TextView
            android:id="@+id/zasob2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gotowka"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold|normal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="262dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <CalendarView
            android:id="@+id/zobaczKalendarz"
            android:layout_width="411dp"
            android:layout_height="297dp"
            android:layout_gravity="center"
            android:background="#FFF"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="329dp"></CalendarView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            app:fabSize="mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="10dp"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_add_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>